# SnakeMD

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  Makefile  README.md  index.html  make.bat  markdown.py  pyproject.toml  readme.py  requirements.txt  setup.py  test.md
.github/workflows/: deploy.yml  docs.yml  linter.yml  test.yml
docs/: .buildinfo  CNAME  conf.py  docs.rst  genindex.html  index.html  index.rst  install.rst  modules.html  objects.inv  py-modindex.html  python-support.csv  requirements.txt  resources.rst  search.html  searchindex.js  snake.rst  snakemd.html  usage.rst  version-history.rst
docs/_build/dirhtml/: .buildinfo  index.html  objects.inv  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  snake.doctree  usage.doctree  version-history.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  snake.html  usage.html  version-history.html
docs/_templates/: layout.html
docs/doc-tags/: objects.inv
docs/doc-tags/_static/: documentation_options.js
docs/doc-tags/modules/: index.html
docs/docs/: document-api.rst  element-api.rst  high-level-api.rst  low-level-api.rst  template-api.rst
docs/doctrees/: environment.pickle  index.doctree  modules.doctree  pymd.doctree  snakemd.doctree
docs/genindex/: index.html
docs/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pymd.html  search.html  searchindex.js  snakemd.html
docs/html/_sources/: index.rst.txt  modules.rst.txt  snakemd.rst.txt
docs/modules/: index.html
docs/py-modindex/: index.html
docs/search/: index.html
docs/snake/: index.html
docs/snakemd/: index.html
docs/v0.1.0/: .buildinfo  index.html  objects.inv
docs/v0.1.0/_sources/: snake.rst.txt
docs/v0.1.0/_static/: documentation_options.js
docs/v0.1.0/genindex/: index.html
docs/v0.1.0/modules/: index.html
docs/v0.1.0/py-modindex/: index.html
docs/v0.1.0/search/: index.html
docs/v0.1.0/snake/: index.html
docs/v0.2.0/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.2.0/_static/: documentation_options.js
docs/v0.2.0/genindex/: index.html
docs/v0.2.0/modules/: index.html
docs/v0.2.0/py-modindex/: index.html
docs/v0.2.0/search/: index.html
docs/v0.2.0/snake/: index.html
docs/v0.3.0/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.3.0/_static/: documentation_options.js
docs/v0.3.0/genindex/: index.html
docs/v0.3.0/install/: index.html
docs/v0.3.0/py-modindex/: index.html
docs/v0.3.0/search/: index.html
docs/v0.3.0/snake/: index.html
docs/v0.3.0/usage/: index.html
docs/v0.3.0/version-history/: index.html
docs/v0.4.1/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.4.1/_sources/: usage.rst.txt
docs/v0.4.1/_static/: documentation_options.js
docs/v0.4.1/genindex/: index.html
docs/v0.4.1/install/: index.html
docs/v0.4.1/py-modindex/: index.html
docs/v0.4.1/search/: index.html
docs/v0.4.1/snake/: index.html
docs/v0.4.1/usage/: index.html
docs/v0.4.1/version-history/: index.html
docs/v0.5.0/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.5.0/_static/: documentation_options.js
docs/v0.5.0/genindex/: index.html
docs/v0.5.0/install/: index.html
docs/v0.5.0/py-modindex/: index.html
docs/v0.5.0/search/: index.html
docs/v0.5.0/snake/: index.html
docs/v0.5.0/usage/: index.html
docs/v0.5.0/version-history/: index.html
docs/v0.6.0/: objects.inv  searchindex.js
docs/v0.6.0/genindex/: index.html
docs/v0.6.0/install/: index.html
docs/v0.6.0/py-modindex/: index.html
docs/v0.6.0/search/: index.html
docs/v0.6.0/snake/: index.html
docs/v0.6.0/version-history/: index.html
docs/v0.7.0/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.7.0/_static/: documentation_options.js
docs/v0.7.0/genindex/: index.html
docs/v0.7.0/install/: index.html
docs/v0.7.0/py-modindex/: index.html
docs/v0.7.0/search/: index.html
docs/v0.7.0/snake/: index.html
docs/v0.7.0/usage/: index.html
docs/v0.7.0/version-history/: index.html
docs/v0.8.0/: .buildinfo  index.html  objects.inv  searchindex.js
docs/v0.8.0/_static/: documentation_options.js
docs/v0.8.0/genindex/: index.html
docs/v0.8.0/install/: index.html
docs/v0.8.0/py-modindex/: index.html
docs/v0.8.0/search/: index.html
docs/v0.8.0/snake/: index.html
docs/v0.8.0/usage/: index.html
docs/v0.8.0/version-history/: index.html
docs/v0.8.1/: .buildinfo  index.html  searchindex.js
docs/v0.8.1/_sources/: version-history.rst.txt
docs/v0.8.1/_static/: documentation_options.js
docs/v0.8.1/genindex/: index.html
docs/v0.8.1/install/: index.html
docs/v0.8.1/py-modindex/: index.html
docs/v0.8.1/search/: index.html
docs/v0.8.1/snake/: index.html
docs/v0.8.1/usage/: index.html
docs/v0.8.1/version-history/: index.html
docs/v1.1.5/: .buildinfo  index.html  objects.inv
docsrc/: Makefile  conf.py  index.rst  install.rst  make.bat  modules.rst  snake.rst  usage.rst  version-history.rst
pymd/: markdown.py  readme.py
snake/: md.py  readme.py
snakemd/: __init__.py  document.py  elements.py  generator.py  readme.py  snakemd.py  templates.py
source/: conf.py  index.rst  markdown.rst  modules.rst  pymd.rst  readme.rst
sphinx/: conf.py
test/: README.md  Test.md
tests/: test_code.py  test_document.py  test_header.py  test_heading.py  test_horizontal_rule.py  test_inline.py  test_inline_text.py  test_inline_text_checkbox.py  test_md.py  test_md_check_list.py  test_md_list.py  test_module.py  test_paragraph.py  test_quote.py  test_raw.py  test_table.py  test_table_of_contents.py
tests/document/: test_document.py
tests/elements/: test_code.py  test_heading.py  test_horizontal_rule.py  test_inline.py  test_md_list.py  test_paragraph.py  test_quote.py  test_raw.py  test_table.py
tests/resources/: python-support.md
tests/templates/: test_alerts.py  test_checklist.py  test_csv_table.py  test_table_of_contents.py
(+15 files in other folders)
