# Poetry settings
[tool.poetry]
name = "SnakeMD"
description = "A markdown generation library for Python."
version = "2.1.0"
license = "MIT"

authors = [
    "Jeremy Grifski <jeremy.grifski@therenegadecoder.com>"
]

readme = "README.md"
homepage = "https://www.snakemd.io"
repository = "https://github.com/TheRenegadeCoder/SnakeMD"
documentation = "https://www.snakemd.io/en/latest/docs/"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
]

[tool.poetry.urls]
Changelog = "https://www.snakemd.io/en/latest/version-history/"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.test.dependencies]
coverage = "^7.2"
markdown = "^3.4"
pytest = "^7.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2"
sphinx-issues = "^3.0"
sphinx_rtd_theme = "^1.2"

[tool.poetry.group.analysis.dependencies]
black = "^23.3"
isort = "^5.12"
pydocstringformatter = "^v0.7"
pylint = "^2.17"

# Pytest settings
[tool.pytest.ini_options]
minversion = "7.3"
testpaths = [
    "tests"
]
log_file = "tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] (%(filename)s:%(lineno)s) %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage settings
[tool.coverage.run]
branch = true
source = [
    "snakemd"
]

[tool.coverage.report]
fail_under = 95

# Black formatting settings
[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

# Pylint settings
[tool.pylint.format]
max-line-length = 88
fail-under = 9.5

# isort setttings
[tool.isort]
profile = "black"
py_version = 311

# pydocstringformatter settings
[tool.pydocstringformatter]
write = true
strip-whitespaces = true
split-summary-body = false
max-line-length = 88
linewrap-full-docstring = true

# Build system settings
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
