[project]
name = "SnakeMD"
description = "A markdown generation library for Python."
license = "MIT"
version = "2.4.0b1"
dynamic = ["classifiers"]
readme = "README.md"
authors = [{name = "Jeremy Grifski", email = "jeremy.grifski@therenegadecoder.com"}]
requires-python = '>=3.9,<4.0'
dependencies = []

[project.urls]
homepage = "https://www.snakemd.io"
repository = "https://github.com/TheRenegadeCoder/SnakeMD"
documentation = "https://www.snakemd.io/en/latest/docs/"
Changelog = "https://www.snakemd.io/en/latest/version-history/"

# Poetry settings
[tool.poetry]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Documentation :: Sphinx",
]
requires-poetry = '>=2.0,<3.0'

[tool.poetry.group.test.dependencies]
coverage = "^7.2"
markdown = "^3.4"
pytest = "^7.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.2"
sphinx-issues = "^3.0"
sphinx_rtd_theme = "^1.2"

[tool.poetry.group.analysis.dependencies]
black = "^23.3"
isort = "^5.12"
pydocstringformatter = "^v0.7"
pylint = "^3.3"

# Pytest settings
[tool.pytest.ini_options]
minversion = "7.3"
testpaths = [
    "tests"
]
log_file = "tests/pytest.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s [%(levelname)s] (%(filename)s:%(lineno)s) %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"

# Coverage settings
[tool.coverage.run]
branch = true
source = [
    "snakemd"
]

[tool.coverage.report]
fail_under = 95

# Black formatting settings
[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

# Pylint settings
[tool.pylint.format]
max-line-length = 88
fail-under = 9.5
max-args = 8

[tool.pylint.messages_control]
disable = [
    "C0302"
]

# isort setttings
[tool.isort]
profile = "black"
py_version = 313

# pydocstringformatter settings
[tool.pydocstringformatter]
write = true
strip-whitespaces = true
split-summary-body = false
max-line-length = 88

# Build system settings
[build-system]
requires = ['poetry-core (>=2.0,<3.0)']
build-backend = "poetry.core.masonry.api"
